Mensagem clara sobre a alteração

--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,11 @@
 # URL que a automação deve acessar
 TARGET_URL="https://www.hapvida.com.br/corretor/login.faces"
+
+# Credenciais de acesso
+COD_CONCESSIONARIA="8567"
+PW_CONCESSIONARIA="415263"
+
+#Popup da extensão SAVI
+Dias_Retroceder=180
+Dias_Processar=1
+Status_Processar="PROCESSADO"
