--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,5 @@
 # URL que a automação deve acessar
-TARGET_URL="https://www.hapvida.com.br/corretor/login.faces"
+TARGET_URL="https://saviatendimento.com.br/saviatendimento/login.faces"
 
 # Credenciais de acesso
 COD_CONCESSIONARIA="8567"
@@ -9,3 +9,7 @@ PW_CONCESSIONARIA="415263"
 Dias_Retroceder=180
 Dias_Processar=1
 Status_Processar="PROCESSADO"
+
+#Savi Atendimento
+usr_cpf="04833367181"
+pw_savi_atd="hapvida2020"
