--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 version: "3.8"
-
 services:
   autodock:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     container_name: autodock_browse_instance
     volumes:
       - ./app:/app
     shm_size: "2gb"
     environment:
       - TZ=America/Sao_Paulo
+      - DISPLAY=:99
+    tmpfs:
+      - /tmp:exec,mode=777
+    # opcional: reiniciar em falha
+    restart: "on-failure"
