--- a/app/.env
+++ b/app/.env
@@ -1,5 +1,6 @@
 # URL que a automação deve acessar
-TARGET_URL="https://saviatendimento.com.br/saviatendimento/login.faces"
+#TARGET_URL="https://saviatendimento.com.br/saviatendimento/login.faces"
+TARGET_URL="https://www.wbuy.com.br/"
 
 # Credenciais de acesso
 COD_CONCESSIONARIA="8567"
