--- a/app/.env
+++ b/app/.env
@@ -1,6 +1,6 @@
 # URL que a automação deve acessar
 #TARGET_URL="https://saviatendimento.com.br/saviatendimento/login.faces"
-TARGET_URL="https://www.wbuy.com.br/"
+TARGET_URL="https://saviatendimento.com.br/saviatendimento/login.faces"
 
 # Credenciais de acesso
 COD_CONCESSIONARIA="8567"
@@ -14,3 +14,6 @@ Status_Processar="PROCESSADO"
 #Savi Atendimento
 usr_cpf="04833367181"
 pw_savi_atd="hapvida2020"
+
+# 2captcha API Key
+API_KEY_2CAPTCHA="e1c80eaf2d56b383ff29cc6eed2451ef"
